# face_recognition

./: CMakeLists.txt  README.md  classifier_demo.cpp  tracker_demo.cpp  trainer_demo.cpp
Trainer/: CMakeLists.txt  Trainer.cpp  Trainer.h
classifier/: CMakeLists.txt  classifier.cpp  classifier.h
trainer/: CMakeLists.txt  trainer.cpp  trainer.h
utils/: utils.cpp  utils.h
